Разделил код на разные слои

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -17,4 +17,5 @@
     <string name="Select_a_language">Select a language</string>
     <string name="Russian">Russian</string>
     <string name="English">English</string>
+    <string name="View_photos">View photos</string>
 </resources>
