--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -18,4 +18,5 @@
     <string name="Select_a_language">Выберите язык</string>
     <string name="Russian">Русский</string>
     <string name="English">Английский</string>
+    <string name="View_photos">Посмотреть фотографии</string>
 </resources>
