--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -19,4 +19,6 @@
     <string name="Russian">Русский</string>
     <string name="English">Английский</string>
     <string name="View_photos">Посмотреть фотографии</string>
+    <string name="View_Movies">Посмотреть фильмы</string>
+
 </resources>
