--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="Russian">Russian</string>
     <string name="English">English</string>
     <string name="View_photos">View photos</string>
+    <string name="View_Movies">View Movies</string>
 </resources>
